REGRESSION (r95926) Assert firing in svg/clip-path/clip-path-on-svg.svg https://bugs.webkit.org/show_bug.cgi?id=68819

Reviewed by Dave Hyatt.

* rendering/RenderObject.cpp:
(WebCore::RenderObject::scheduleRelayout): Revert to using view() instead of the RenderView**
parameter of isRooted, since only the former returns 0 when the document is detached.



git-svn-id: svn://svn.chromium.org/blink/trunk@95985 bbb929c8-8fbe-4397-9dbb-9b2b20218538